--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "buildup": "cd client && yarn run build"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
