--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
+    "moment": "^2.19.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
