--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ client/node_modules
 /coverage
 
 # production
-#client/build
-#client/src/styles/main.min.css
-src
+client/build
+client/src/styles/main.min.css
+#src
 # misc
 .DS_Store
 .env.local
