--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "moment": "^2.19.4",
     "pg": "^7.4.0",
+    "pg-promise": "^7.3.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
