--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "moment": "^2.19.4",
+    "nodemon": "^1.13.3",
     "pg": "^7.4.0",
     "pg-promise": "^7.3.2",
     "request": "^2.83.0",
