--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "moment": "^2.19.4",
     "nodemon": "^1.13.3",
